--- a/index.html
+++ b/index.html
@@ -10,26 +10,30 @@
 </head>
 <body>
     <div class='container'>
-        <h1>Все фото</h1>
-        <ul class='List'>
-            <li id = '1' class='itemList'>Первая картинка</li>
-            <li id = '2' class='itemList'>Вторая картинка</li>
-            <li id = '3' class='itemList'>Третья картинка</li>
-            <li id = '4' class='itemList'>Четвертая картинка</li>
-            <li id = '5' class='itemList'>Пятая картинка</li>
-            <li id = '6' class='itemList'>Шестая картинка</li>
+        <h1 id='title'>Все фото</h1>
+        <ul id='list' class='List'>
+            <li id = '1' class='itemList'>Голубое озеро</li>
+            <li id = '2' class='itemList'>Пруд</li>
+            <li id = '3' class='itemList'>Красиове озеро с горами</li>
+            <li id = '4' class='itemList'>Закат в мрачно время</li>
+            <li id = '5' class='itemList'>Океан</li>
+            <li id = '6' class='itemList'>Красивый Закат</li>
         </ul>
-        <div class='images'>
-            <img src="./picture/big-1-volsebnaa-avstria.jpg" alt="first">
-            <img src="./picture/gora-22.jpg" alt="second">
-            <img src="./picture/krasivyy-zakat-nad-ozerom.jpg" alt="third">
-            <img src="./picture/mota.ru_2016111538.jpg" alt="foth">
-            <img src="./picture/selskaja-krasivaja-priroda.jpg" alt="fivth">
-            <img src="./picture/sia.jpg" alt="six">
+        <div id = 'images' class='images'>
+            <img src="./picture/blue_lake.jpg" alt="first">
+            <img src="./picture/house.jpg" alt="second">
+            <img src="./picture/lake_and_mountins.jpg" alt="third">
+            <img src="./picture/mrachniy_zakat.jpg" alt="foth">
+            <img src="./picture/sia.jpg" alt="fivth">
+            <img src="./picture/zakat.jpg" alt="six">
         </div>
-        <div class='buttons'>
-            <button class="delete" id='btn'>Удалить все</button>
-            <button class="delete" id='btn'>Новое окно</button>
+        <div id='buttons' class='buttons'>
+            <button id = 'delete' class="delete">Удалить все</button>
+            <button class="delete">Новое окно</button>
+        </div>
+        <div class = 'text'>
+            <input id = 'input' type="text" />
+            <button id='submit'>Submit</button>
         </div>
 </div>
 </body>
